--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Lora:ital,wght@0,400..700;1,400..700&family=Manrope:wght@200..800&display=swap')
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -26,9 +17,8 @@
 }
 
 body {
-  font-family: 'Manrope', sans-serif;
   color: rgb(var(--foreground-rgb));
-  background: radial-gradient(circle at center, #c6c3f7, #f8efd2), linear-gradient(
+  background: linear-gradient(œ
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
@@ -36,87 +26,64 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* Add #F9EDC8 to specific elements */
-.special-element {
-  background-color: #f8df94;
+.shadow-services {
+  box-shadow: 
+  40px 40px 50px 0px rgba(225, 225, 230, 0.8),
+  0px 0px 50px 0px rgba(217, 217, 217, 0.2) inset,
+  -40px -40px 80px 0px rgba(255, 255, 255, 0.8);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-    color: black; /* Set text color to black */
-  }
-
-  .shadow-services {
-    box-shadow: 
-    40px 40px 50px 0px rgba(225, 225, 230, 0.8),
-    0px 0px 50px 0px rgba(217, 217, 217, 0.2) inset,
-    -40px -40px 80px 0px rgba(255, 255, 255, 0.8);
-  }
-
-  .shadow-inset {
-    box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-  }
-
-  .transition-image {
-    transition: opacity 0.5s ease-in-out;
-  }
-
+.scramble-text {
+  display: inline-block;
+  animation: scramble 0.3s infinite alternate;
 }
 
-@keyframes bounceIn {
-  0% {
-      opacity: 0;
-      transform: scale(0.3)
-      translate3d(0, 0, 0);
-  }
-  50% {
-      opacity: 0.9;
-      transform: scale(1.1);
-  }
-  80% {
-      opacity: 1;
-      transform: scale(0.89);
-  }
-  100% {
-      opacity: 1;
-      transform: scale(1)
-      translate3d(0, 0, 0);
-  }
+.svg-tick {
+  animation: bounceIn 3s linear infinite;
+    animation-delay: 0.1s;
 }
-.animation:hover {
-  animation: bounceIn 3s linear forwards;
+
+.svg-tick-two {
+  animation: bounceInTwo 4s linear infinite;
   animation-delay: 0.1s;
 }
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
+.bg-ring {
+  background: url(../images/bg-ring.gif) center no-repeat;
+}
+
+@keyframes bounceInTwo {
+  0% { opacity: 0; } 
+  50% { opacity: 1; } 
+  100% { opacity: 0; } 
+}
+
+
+
+@keyframes bounceIn {
+  0% { opacity: 1; } 
+  50% { opacity: 0; } 
+  100% { opacity: 1; } 
+}
+
+@keyframes scramble {
+  0% {
+    transform: translateX(0);
   }
-  to {
-    opacity: 1;
+  100% {
+    transform: translateX(0.1em);
   }
 }
 
-.animate-fadeIn {
-  animation: fadeIn 3s ease-out;
+@font-face {
+  font-family: "Helvetica Now Display";
+  src: url("/fonts/helvetica-now-display.otf");
+  font-weight: 400;
+  font-style: normal;
 }
-
-.orange-border {
-  /* color: transparent; Make the text transparent */
-  text-shadow:
-    1px 1px 0 #f90, /* Top left */
-    -1px 1px 0 #f90, /* Top right */
-    1px -1px 0 #f90, /* Bottom left */
-    -1px -1px 0 #f90; /* Bottom right */
+@font-face {
+  font-family: "Helvetica Now Display";
+  src: url("/fonts/helvetica-now-display-bold.otf");
+  font-weight: bold;
+  font-style: normal;
 }
-
-.experience-txt {
-  font-family: "Lora", serif;
-  font-weight: 500;
-  font-style: italic;
-}
-
-
-
-
